<resources>
    <string name="app_name">PC Part Builder</string>
    <string name="login_email_title">Email:</string>
    <string name="login_enter_email_address_hint">Enter Email Address</string>
    <string name="login_password_title">Password:</string>
    <string name="login_enter_password_hint">Enter Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="login_title_pc_part_builder">PC Part Builder</string>
    <string name="pc_part_builder_app_logo_image_content_description">PC Part Builder App Logo</string>
    <string name="button_register_sign_up_text">sign up</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here!</string>
    <string name="temp_login_text_for_testing">Welcome you are now logged in</string>
    <string name="temp_logout_button">Logout</string>
    <string name="forgot_your_password_reset_your_password_here">Forgot your password? Reset your password here!</string>
    <string name="forgot_password_reset_your_password_here">Forgot Password? Reset your password here!</string>
    <string name="reset_password_pc_part_builder_title">PC Part Builder</string>
    <string name="reset_password_email_title">Email:</string>
    <string name="reset_password_enter_email_address_hint">Enter Email Address</string>
    <string name="button_reset_password_text">reset password</string>
    <string name="return_back_to_user_login_here">Return back to user login here!</string>
    <string name="create_list_card_icon_description">PNG Icon Image of a CPU</string>
    <string name="view_lists_icon_description">PNG Icon for View Lists Card</string>
    <string name="png_icon_for_guide_card">PNG Icon for Guide card</string>
    <string name="create_list_card_title">Create List</string>
    <string name="create_list_card_description">Create a List of Different Components!</string>
    <string name="view_lists_card_title">View Lists</string>
    <string name="view_lists_card_description">View Your Saved Lists!</string>
    <string name="view_guides_card_title">View Guides</string>
    <string name="view_guides_card_description">View guides about components and more!</string>
    <string name="logout_text_toolbar">Logout</string>
    <string name="how_to_use_the_app">How to use the App!</string>
    <string name="learn_how_to_navigate_through_the_app">Learn how to navigate through the app</string>
    <string name="learn_more_about_parts">Learn more about parts!</string>
    <string name="learn_more_about_each_individual_component">Learn more about each individual component</string>
    <string name="learn_how_to_build_a_pc">Learn how to build a PC</string>
    <string name="learn_how_to_build_a_pc_from_the_ground_up">Learn how to build a PC from the ground up</string>
    <string name="icon_for_learn_how_to_navigate_the_app">icon for learn how to navigate the app</string>
    <string name="learn_more_about_parts_icon">learn more about parts icon</string>
    <string name="learn_more_about_building_a_pc_icon">learn more about building a pc icon</string>
    <string name="learn_more_about_the_cpu_btn_text">Learn more about the CPU</string>
    <string name="learn_more_about_the_cpu_cooler">Learn more about the cpu cooler</string>
    <string name="learn_more_about_the_motherboard_btn">Learn more about the motherboard</string>
    <string name="learn_more_about_the_memory_btn">Learn more about the memory</string>
    <string name="learn_more_about_the_storage_btn">Learn more about the storage</string>
    <string name="learn_more_about_the_video_card_gpu_btn">Learn more about the video card (GPU)</string>
    <string name="learn_more_about_the_case_btn">Learn more about the case</string>
    <string name="learn_more_about_the_power_supply_psu_btn">Learn more about the power supply (PSU)</string>
    <string name="description_for_guide">Description for guide</string>
    <string name="title_for_guide">Title For Guide</string>
    <string name="image_of_the_guide">image of the guide</string>
    <string name="prep_one_pc_build_tools">Prep 1 - PC Build Tools</string>
    <string name="prep_two_pc_cases">Prep 2 - PC Cases</string>
    <string name="prep_three_pc_parts">Prep 3 - PC Parts</string>
    <string name="step_one_installing_the_cpu">Step 1 - Installing The CPU</string>
    <string name="step_two_optional_install_m_2_ssds">Step 2 - (Optional) Install M.2 SSDs</string>
    <string name="step_three_install_cpu_cooling">Step 3 - Install CPU Cooling</string>
    <string name="step_four_install_memory_ram">Step 4 - Install Memory (RAM)</string>
    <string name="step_five_optional_do_a_test_outside_the_case">Step 5 - (Optional) Do a test outside the case</string>
    <string name="step_six_mount_power_supply">Step 6 - Mount power supply</string>
    <string name="step_seven_install_motherboard">Step 7 - Install Motherboard</string>
    <string name="step_eight_install_gpu">Step 8 - Install GPU</string>
    <string name="step_nine_install_storage">Step 9 - Install Storage</string>
    <string name="step_ten_install_operating_system">Step 10 - Install Operating System</string>
    <string name="step_eleven_learn_more">Step 11 - Learn More</string>
    <string name="return_to_main_activity_text_toolbar">Return to Main Activity</string>
    <string name="enter_title_for_list_header">Enter Title for List: </string>
    <string name="enter_title_for_your_list_hint">Type In Title....</string>
    <string name="select_cpu_title_header">CPU:</string>
    <string name="name_of_selected_cpu_here">Select a CPU!</string>
    <string name="image_of_selected_cpu">image of selected CPU</string>
    <string name="price_of_product" formatted="true">Price: £%s</string>
    <string name="add_your_title_here">Add your title here!</string>
    <string name="select_a_cpu_cooler">Select a CPU Cooler</string>
    <string name="motherboard">Motherboard:</string>
    <string name="cpu_cooler">CPU Cooler:</string>
    <string name="add_cpu_cooler">Add CPU Cooler</string>
    <string name="remove1">Remove</string>
    <string name="remove2">Remove</string>
    <string name="remove3">Remove</string>
    <string name="remove4">Remove</string>
    <string name="remove5">Remove</string>
    <string name="remove6">Remove</string>
    <string name="remove7">Remove</string>
    <string name="add_cpu">Add CPU</string>
    <string name="image_of_selected_motherboard">image of selected motherboard</string>
    <string name="select_a_motherboard">Select a Motherboard</string>
    <string name="add_motherboard">add motherboard</string>
    <string name="memory">Memory</string>
    <string name="select_memory">Select memory</string>
    <string name="image_of_selected_memory">image of selected memory</string>
    <string name="add_memory">add memory</string>
    <string name="image_of_memory">image_of_memory</string>
    <string name="image_of_motherboard">image_of_motherboard</string>
    <string name="storage">Storage</string>
    <string name="select_storage">Select Storage</string>
    <string name="image_of_selected_storage">image of selected storage</string>
    <string name="video_card">Video Card</string>
    <string name="select_video_card">select video card</string>
    <string name="image_of_selected_gpu">image of selected gpu</string>
    <string name="add_video_card">add video card</string>
    <string name="image_of_selected_case">image of selected case</string>
    <string name="select_case">Select Case</string>
    <string name="pc_case">PC Case</string>
    <string name="image_of_case">image of case</string>
    <string name="add_case">add case</string>
    <string name="power_supply">Power Supply</string>
    <string name="image_of_selected_power_supply">image of power supply</string>
    <string name="add_power_supply">add power supply</string>
    <string name="image_of_psu">image of psu</string>
    <string name="estimated_price_of_list">Estimated Price Of List:</string>
    <string name="estimated_wattage_of_list">Estimated Wattage Of List: </string>
    <string name="enter_list_description">Enter Description For List:</string>
    <string name="enter_description_about_the_list">Enter Short Description About The List</string>
    <string name="cost_of_list" formatted="true">Estimated Price Of List: £ </string>
    <string name="name_of_cpu_from_users_list">name of CPU from users list</string>
    <string name="enter_updated_email_address">Enter updated email address</string>
    <string name="change_email">Change Email:</string>
    <string name="update_account_details">Update Account Details</string>
    <string name="change_password">Change Password:</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">update password</string>
    <string name="please_enter_login_details_again_before_continuing">Please Enter Login Details Again Before Continuing...</string>
    <string name="enter_email_for_account">Enter Email For Account:</string>
    <string name="enter_password_for_account">Enter Password For Account:</string>
    <string name="submit_details">Submit Details</string>
    <string name="delete_account">Delete Account</string>
    <string name="deleting_your_account_will_remove_your_details_and_saved_lists_from_our_system_only_continue_if_you_re_sure">Delete Your Account:</string>
    <string name="learn_how_to_create_list">Learn How To Create List</string>
    <string name="learn_how_to_view_list">Learn How To View List</string>
    <string name="learn_how_to_manage_account">Learn How To Manage Account</string>
</resources>