<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".LoginAccountActivity">


    <TextView
        android:id="@+id/text_email_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="331dp"
        android:text="@string/login_email_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_title" />

    <EditText
        android:id="@+id/text_login_enter_email"
        android:layout_width="355dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/login_enter_email_address_hint"
        android:inputType="textWebEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_login_title"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/text_password_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="295dp"
        android:text="@string/login_password_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_enter_email" />

    <EditText
        android:id="@+id/text_login_enter_password"
        android:layout_width="353dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/login_enter_password_hint"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password_login_title" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="120dp"
        android:background="#FFC107"
        android:text="@string/sign_in_button_text"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_enter_password" />

    <TextView
        android:id="@+id/text_register_redirect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/don_t_have_an_account_sign_up_here"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:onClick="onClick"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        android:focusable="true" />

    <ImageView
        android:id="@+id/image_login_logo"
        android:layout_width="161dp"
        android:layout_height="152dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/pc_part_builder_app_logo_image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/desktop_black_original" />

    <TextView
        android:id="@+id/text_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="152dp"
        android:text="@string/login_title_pc_part_builder"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_login_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>