<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".GuideLandingPageActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/how_to_use_app_card"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/test_bg"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="230dp"
                    android:layout_marginStart="250dp"
                    android:layout_marginEnd="270dp"
                    android:contentDescription="@string/create_list_card_icon_description" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_use_the_app"
                    android:textColor="#ffff"
                    android:textSize="32dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_how_to_navigate_through_the_app"
                    android:textColor="#ffff"
                    android:textSize="14dp" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/learn_more_about_parts"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/test_bg"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="230dp"
                    android:layout_marginStart="250dp"
                    android:layout_marginEnd="270dp"
                    android:contentDescription="@string/view_lists_icon_description" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more_about_parts"
                    android:textColor="#ffff"
                    android:textSize="32dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more_about_each_individual_component"
                    android:textColor="#ffff"
                    android:textSize="14dp" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/learn_how_to_build_pc"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/test_bg"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="230dp"
                    android:layout_marginStart="250dp"
                    android:layout_marginEnd="270dp"
                    android:contentDescription="@string/png_icon_for_guide_card" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_how_to_build_a_pc"
                    android:textColor="#ffff"
                    android:textSize="32dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_how_to_build_a_pc_from_the_ground_up"
                    android:textColor="#ffff"
                    android:textSize="14dp" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>